Fix spacing between titles in Confiramtion index page.

--- a/app/assets/stylesheets/mobile/_mobile.scss
+++ b/app/assets/stylesheets/mobile/_mobile.scss
@@ -10,6 +10,7 @@
   font-family: "Roboto", "sans-serif";
   font-weight: 700;
   font-size: 18px;
+  margin-top: 18px;
 }
 
 .mobile-header {
